# rota

./: Cargo.toml  README.md
assets/: tarot-rwcs.json  tarot-rwcs.xml
src/: lib.rs  main.rs
