[package]
name = "rota"
version = "0.1.0"
authors = ["Adam A.G. Shamblin <adam@vexingworkshop.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

minidom = "0.13.0"
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
